# React-Native-VoiceWeaver

./: .gitignore  README.md  base.config.js  basic.config.js  egado书源规则说明.md  jest.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo  书源.json
harmony/: .gitignore  README.md  build-profile.json5  hvigorw  oh-package.json5
harmony/AppScope/: app.json5
harmony/AppScope/resources/base/element/: string.json
harmony/aggregated_login/: oh-package-lock.json5
harmony/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
harmony/entry/src/main/: module.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp  RnFabricPackage.cpp  RnFabricPackage.h
harmony/entry/src/main/cpp/Fabric/RnFabircView/: RnFabricProps.cpp  RnFabricProps.h  RnFabricViewComponentDescriptor.h  RnFabricViewEventEmitRequestHandler.h  RnFabricViewEventEmitter.cpp  RnFabricViewEventEmitter.h  RnFabricViewJSIBinder.h  RnFabricViewNapiBinder.h
multibundle/: moduleId.js
src/: App.tsx
src/ts/modules/NovelReader/: NovelReaderApp.tsx
src/ts/modules/NovelReader/bookSource/: LocalBookSourceService.ts  apibiChapterToken.ts  bookSourceLogger.ts  bookSources.json  builtinBookSources.ts  requestClient.ts  ruleEvaluator.ts  ruleUtils.ts  types.ts  userBookSourceStorage.ts
src/ts/modules/NovelReader/components/: AudioLibraryModal.tsx  BookDetailModal.tsx  BookSourceManagerModal.tsx  ReaderCatalog.tsx  ReaderFooter.tsx  ReaderHeader.tsx  SegmentEditorModal.tsx  SleepTimerModal.tsx  SourceSwitchModal.tsx
src/ts/modules/NovelReader/contexts/: ActiveSegContext.ts
src/ts/modules/NovelReader/controllers/: ListenAudioCacheController.ts  VideoCastController.ts  VideoPlayerController.ts  (+1 more)
src/ts/modules/base/: index.js
src/ts/types/: he.d.ts
src/ts/widget/: RnFabricView.tsx  RnFabricViewComponent.tsx
turboModules/: package.json
turboModules/src/: NativeBridgeTurboModule.tsx  index.ts
(+86 files in other folders)
